linux/driver/tmp/3.13.0-45-generic/blk_queue_max_sectors.log
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/blk_queue_max_sectors.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_max_sectors.c
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/blk_queue_max_sectors.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_max_sectors.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_max_sectors.c: In function ‘foo’:
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_max_sectors.c:9:2: error: implicit declaration of function ‘blk_queue_max_sectors’ [-Werror=implicit-function-declaration]
  blk_queue_max_sectors(q, 1);
  ^
cc1: all warnings being treated as errors
